Fix input spacing on focus

--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,6 @@ form {
 .left-form, .right-form {
 	display: flex;
 	flex-direction: column;
-	gap: 0.2rem;
 	width: 30%;
 	min-width: 15rem;
 }
@@ -97,11 +96,14 @@ form {
 input {
 	border: 1px solid rgba(0,0,0,0.3);
 	border-radius: 3px;
+	outline: none;
+	margin-bottom: 0.5rem;
 }
 
 input:focus {
-	border: 1px solid darkblue;
+	border: 2px solid darkblue;
 	box-shadow: 2px 2px 3px black;
+	margin-bottom: calc(0.5rem - 2px);  /* 2px shadow subtracted */
 }
 
 input:invalid {
